2002-04-24  Christian Groessler <chris@groessler.org>

	* config/tc-z8k.c (build_bytes): Add support for new cases:
	CLASS_IGNORE and ARG_NIM4.
	(md_assemble): Prevent destruction of input_line_pointer if
	get_operands returns failure.

2002-04-24  Chris G. Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (macro_build): Do _not_ allow MIPS-3D
	instructions to be generated by macros.

2002-04-24  Andreas Schwab  <schwab@suse.de>

	* config/tc-i386.c (output_jump, output_disp)
	(md_estimate_size_before_relax): Don't set fx_pcrel_adjust any
	more.
	(md_apply_fix3): Remember addend value for rela relocations.
	(tc_gen_reloc): Correctly compute pc-relative relocation addend.

2002-04-22  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (macro_build): Add close-parenthesis missing
	from previous change.

2002-04-22  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c (macro_build): Add warning if macro instructions
	are expanded into a branch delay slot.

2002-04-17  Geoffrey Keating  <geoffk@redhat.com>

	* dwarf2dbg.c (dwarf2_gen_line_info): Do emit duplicate line
	numbers, gdb relies on them to detect the start of the prologue.

2002-04-17  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* config/tc-s390.c (tc_s390_fix_adjustable): Prevent adjustments to
	symbols in merge sections.

2002-04-16  Alan Modra  <alan@weed.local>

	* as.c (main): Don't reference _bfd_chunksize.

2002-04-15  Tom Rix  <trix@redhat.com>

	* config/tc-d10v.c (d10v_fix_adjustable): Prevent adjustments to
	symbols in merge sections.

2002-04-11  Richard Sandiford  <rsandifo@redhat.com>

	* doc/invoke.texi (TC_LARGEST_EXPONENT_IS_NORMAL): Document.
	* config/atof-ieee.c (TC_LARGEST_EXPONENT_IS_NORMAL): Add an
	argument for the precision.
	(gen_to_words): Update accordingly.

2002-04-10  Alan Modra  <amodra@bigpond.net.au>

	* as.c (parse_args <OPTION_VERSION>): Use VERSION is
	BFD_VERSION_STRING unavailable.
	* config/tc-i386.c (INLINE): Define (for non-BFD assembler).
